GL/Projet_GL/src/test/deca/syntax/invalid/sansObjet/unfinished_block.deca
// Test : syntax_invalid_unfinished_block
// But : détecter un bloc non terminé.
// Type d'erreur : erreur syntaxique
// Résultat attendu : erreur de syntaxe.

{
    int a;